# benchmark-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark_project.cpp  readme.md
include/bbp/: application_instance_lock.h  block_production_config.h  block_production_policy.h  capability.h  cgroup.h  chain_extra_args.h  chain_kind.h  chain_network.h  default_peer_topology.h  http_client.h  log_level.h  log_tail.h  log_view.h  logging.h  mcp_dispatcher.h  mcp_endpoint.h  mcp_host_application.h  mcp_live_application.h  mcp_operation_service.h  mcp_protocol.h  mcp_registry.h  mcp_run_evidence.h  mcp_server.h  metric_sparkline.h  mining_difficulty.h  mining_mode.h  network.h  network_allocation_lock.h  network_rule_pane.h  node_artifact_inventory.h  node_config_snapshot.h  node_file_pane.h  node_lifecycle_policy.h  node_log_collector.h  node_log_pane.h  operator_command_status.h  operator_connection.h  parsed_tui_command.h  peer_connectivity_controller.h  peer_connectivity_policy.h  (+40 more)
include/bbp/drivers/: bitcoin_driver.h  chain_command_executor.h  chain_driver.h  chain_driver_registry.h  chain_wallet_snapshot.h  chain_wallet_transaction.h  firo_driver.h  monero_driver.h
include/bbp/simulator/: block_generation_workload.h  checkpoint_workload.h  connect_peer_workload.h  constants.h  disconnect_peer_workload.h  freeze_node_workload.h  freeze_request.h  legacy_cli_inputs.h  network_block_rule.h  network_block_workload.h  network_condition_workload.h  (+26 more)
include/benchmark_sim/: block_production_config.h  block_production_policy.h  capability.h  cgroup.h  firo_driver.h  http_client.h  log_tail.h  log_view.h  logging.h  mining_difficulty.h  mining_mode.h  network.h  node_log_collector.h  node_log_pane.h  parsed_tui_command.h  periodic_metrics_collector.h  probabilistic_block_scheduler.h  process.h  result.h  run_report.h  simulation_cancelled.h  simulation_command.h  simulation_command_processor.h  simulation_command_queue.h  simulation_registry.h  simulator_app.h  tui.h  tui_command_parser.h  util.h
src/: application_instance_lock.cpp  block_production_policy.cpp  capability.cpp  cgroup.cpp  chain_extra_args.cpp  chain_kind.cpp  chain_network.cpp  default_peer_topology.cpp  firo_driver.cpp  http_client.cpp  log_level.cpp  log_tail.cpp  log_view.cpp  logging.cpp  main.cpp  mcp_dispatcher.cpp  mcp_endpoint.cpp  mcp_host_application.cpp  mcp_live_application.cpp  mcp_operation_service.cpp  mcp_protocol.cpp  mcp_registry.cpp  mcp_run_evidence.cpp  mcp_schema.cpp  mcp_server.cpp  metric_sparkline.cpp  mining_difficulty.cpp  network.cpp  network_allocation_lock.cpp  network_rule_pane.cpp  node_artifact_inventory.cpp  node_file_pane.cpp  node_lifecycle_policy.cpp  node_log_collector.cpp  node_log_pane.cpp  operator_command_status.cpp  operator_connection.cpp  peer_connectivity_controller.cpp  peer_count_policy.cpp  peer_list_pane.cpp  (+39 more)
src/drivers/: bitcoin_driver.cpp  chain_command_executor.cpp  chain_driver.cpp  chain_driver_registry.cpp  firo_driver.cpp  monero_driver.cpp
tests/cmake/: copied_run_marker_cleanup.cmake  expect_arguments_failure.cmake  expect_failure.cmake  non_isolated_cleanup.cmake  scenario_action_bound.cmake  tui_exit_confirmation.cmake  tui_shared_modal_epilogue.cmake  vendored_boost_multiprecision.cmake
tests/helpers/: no_cap_net_admin_exec.cpp  process_tree_helper.cpp  tui_pty_helper.cpp
tests/scenarios/: invalid-block-production-field.json  invalid-block-production-without-miner.json  invalid-cgroup-cpu-weight.json  invalid-cgroup-io-device.json  invalid-cgroup-io-duplicate.json  invalid-cgroup-io-missing-field.json  invalid-cgroup-io-zero.json  invalid-chain-active-ambiguity.json  invalid-chain-active-missing.json  invalid-chain-binary-alias.json  invalid-chain-default-binary-shape.json  invalid-chain-default-binary.json  invalid-chain-definition-field.json  invalid-chain-definition-shape.json  invalid-chain-driver-mismatch.json  invalid-chain-missing-default-binary.json  invalid-chain-missing-driver.json  invalid-chain-name.json  invalid-chains-empty.json  invalid-chains-shape.json  invalid-checkpoint-name.json  invalid-connect-peer-peer.json  invalid-connect-peer-self.json  invalid-default-network-condition-field.json  invalid-directional-edge-condition-latency-alias.json  invalid-directional-edge-condition-limit.json  invalid-directional-edge-condition-loss.json  invalid-directional-edge-condition-without-isolation.json  invalid-directional-region-edge-condition-latency-alias.json  invalid-directional-region-edge-condition-loss.json  invalid-directional-region-edge-condition-without-isolation.json  invalid-disconnect-peer-missing-peer.json  invalid-disconnect-peer-zero-timeout.json  invalid-duplicate-node-id.json  invalid-freeze-node-missing-duration.json  invalid-freeze-node-node.json  invalid-freeze-node-plural-nodes.json  invalid-freeze-node-zero-duration.json  invalid-heal-partition-workload-overlap.json  invalid-legacy-generate-blocks.json  (+252 more)
tests/unit/: application_instance_lock_tests.cpp  bitcoin_driver_tests.cpp  block_production_policy_tests.cpp  capability_tests.cpp  cgroup_tests.cpp  chain_extra_args_tests.cpp  chain_kind_tests.cpp  chain_network_tests.cpp  chain_wallet_transaction_tests.cpp  default_peer_topology_tests.cpp  firo_driver_tests.cpp  http_client_tests.cpp  log_level_tests.cpp  log_tail_tests.cpp  logging_tests.cpp  mcp_dispatcher_tests.cpp  mcp_endpoint_tests.cpp  mcp_host_application_tests.cpp  mcp_live_application_tests.cpp  mcp_operation_service_tests.cpp  mcp_protocol_tests.cpp  mcp_registry_tests.cpp  mcp_server_tests.cpp  metric_sparkline_tests.cpp  monero_driver_tests.cpp  network_rule_pane_tests.cpp  network_tests.cpp  no_shellout_tests.cpp  node_artifact_inventory_tests.cpp  node_file_pane_tests.cpp  node_lifecycle_policy_tests.cpp  node_log_pane_tests.cpp  node_runtime_tests.cpp  operator_command_status_tests.cpp  operator_connection_tests.cpp  peer_connectivity_controller_tests.cpp  peer_list_pane_tests.cpp  perf_counter_target_resolver_tests.cpp  perf_counter_tests.cpp  periodic_metrics_collector_tests.cpp  (+35 more)
(+34 files in other folders)
